# tracer

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  hitable.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  tracer.rs  vector.rs
src/scenes/: scene1.rs  scene2.rs
