[package]
name = "tracer"
version = "0.1.0"
edition = "2018"

[lib]
name = "tracer"
path = "src/lib.rs"

[[bin]]
name = "tracer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
indicatif = {version = "0.17.8", features = ["rayon"]}
rayon = "1.3.0"

[profile.release]
debug = true
